--- a/project2.html
+++ b/project2.html
@@ -52,7 +52,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="https://i.dlpng.com/static/png/6746401_preview.png">Tin tức Vinmart
+							<img src="https://cdn-icons-png.flaticon.com/512/1004/1004017.png">Tin tức Vinmart
 						</a>
 					</li>
 					<li>
